students/KolodichMaksim/task_02/src/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: as-63-220013-v09
  labels:
    org.bstu.owner: proxladno
    org.bstu.student.slug: as-63-220013-v09
    org.bstu.student.fullname: kolodich-maksim-pavlovich
