students/KolodichMaksim/task_02/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: net-web09
  namespace: app09
  labels:
    app: web09
    org.bstu.student.slug: as-63-220013-v09
spec:
  type: ClusterIP
  selector:
    app: web09
  ports:
    - port: 80
      targetPort: 8071
      protocol: TCP
